[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "treeproject"
version = "2.0.0"
description = "Lightweight Python utilities to render directory trees and extract file contents with filtering."
keywords = ["filesystem", "tree", "pathlib", "utilities"]
readme = "README.md"
license = "MIT"
authors = ["Dylan Lebreton <dylan.lebreton1996@gmail.com>"]
homepage = "https://github.com/dylan-lebreton/treeproject"
repository = "https://github.com/dylan-lebreton/treeproject"
documentation = "https://github.com/dylan-lebreton/treeproject#readme"

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7,<10"
